--- a/src/App.css
+++ b/src/App.css
@@ -107,11 +107,11 @@
 	background-color: var(--primary-color2);
 }
 
-.column__adsList::-webkit-scrollbar {
+.column__appsList::-webkit-scrollbar {
 	width: 6px;
 }
 
-.column__adsList::-webkit-scrollbar-thumb {
+.column__appsList::-webkit-scrollbar-thumb {
 	background-color: #e8e8e8;
 	border-radius: 50px;
 }
@@ -122,7 +122,7 @@
 	.column__apps {
 		height: 100vh;
 	}
-	.column__adsList {
+	.column__appsList {
 		overflow-y: scroll;
 	}
 }
